Artemus Release Notes
=====================

5.0.2
-----

 - New features:
   * Both the exec() and the process() methods accept
     arguments in their calls that can be referenced with
     dollar-prefixed arguments as usual.

5.0.1
-----

 * The %% keyword returns the full extended hash.
 * Fixed processing of file templates returning 0.
 * A new function template `dump', to dump an expression
   using Data::Dumper.
 * Fixed a bug in processing ARTEMUS_STR.

5.0.0
-----

 * New milestone release. The Artemus language has been
   completely rewritten to be a LISP-like, compiled
   machine. No backward compatibility is provided (other
   than including the old 4.x module in the distribution).
   The new 5.x language is faster, more flexible, less
   cumbersome (for example, there's no need for escaping
   inner blocks that should execute only conditionally)
   and include support for translateable strings.

4.1.3
-----

 * The `foreach' constructor now includes an optional
   4th argument, the _header_, that will be appended
   to the output in case it's different from the
   previous iteration. This code block is expected to
   contain dollar-prefixed arguments.
 * New template function `item', to return an item
   from a colon-separated list given its subscript.
 * Fix `case' comparisons when the variable contains
   carriage returns.
 * Fix loader_func() to correctly process empty
   templates.
 * Unless a very grave bug or vulnerabity is found,
   this will be the last 4.x release; next release
   will jump to the 5.x branch. Please take note that
   this new branch is intentionally incompatible
   with current one. Anyway, the Artemus4.pm module
   and associated tools are planned to be distributed
   with the 5.x series for a very long time.

4.1.2
-----

 * New template function `sort'.
 * New template function `reverse'.
 * Templates can be loaded from external sources by
   using the new `loader_func' argument to new().